# healthpipe

./: .gitignore  README.md  claude.md  pyproject.toml
.github/workflows/: ci.yml
docs/: de-identification.md  hipaa_compliance.md  synthetic_data.md
examples/: csv_deidentify.py  demo.py  fhir_pipeline.py  synthetic_generation.py
src/healthpipe/: __init__.py  __main__.py  cli.py  exceptions.py  pipeline.py
src/healthpipe/audit/: __init__.py  compliance.py  lineage.py  logger.py
src/healthpipe/deidentify/: __init__.py  date_shift.py  llm_verify.py  ner.py  patterns.py  safe_harbor.py
src/healthpipe/ingest/: __init__.py  csv_mapper.py  fhir.py  hl7v2.py  pdf_ocr.py  schema.py
src/healthpipe/privacy/: __init__.py  budget.py  differential.py  k_anonymity.py  reidentification_risk.py
src/healthpipe/synthetic/: __init__.py  generator.py  utility.py  validator.py
tests/: conftest.py  test_audit.py  test_audit_edge_cases.py  test_cli.py  test_confidence_scores.py  test_deidentify.py  test_deidentify_edge_cases.py  test_dry_run.py  test_exceptions.py  test_field_ordering.py  test_ingest.py  test_ingest_edge_cases.py  test_pipeline.py  test_pipeline_edge_cases.py  test_privacy.py  test_privacy_edge_cases.py  test_reidentification_risk.py  test_safe_harbor_coverage.py  test_schema.py  test_synthetic.py
