[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthpipe"
version = "0.1.0"
description = "Privacy-preserving clinical data pipeline with HIPAA-compliant de-identification, differential privacy, and synthetic data generation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sushaan Kandukoori", email = "sushaan@vytus.health" },
]
keywords = [
    "healthcare",
    "hipaa",
    "fhir",
    "de-identification",
    "differential-privacy",
    "synthetic-data",
    "clinical-data",
    "privacy",
    "phi",
    "ehr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.25",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "click>=8.0",
]

[project.optional-dependencies]
nlp = [
    "spacy>=3.7",
]
ocr = [
    "pytesseract>=0.3",
    "Pillow>=10.0",
    "pdf2image>=1.16",
]
dp = [
    "opendp>=0.9",
]
synthetic = [
    "sdv>=1.10",
]
llm = [
    "anthropic>=0.30",
]
all = [
    "healthpipe[nlp,ocr,dp,synthetic,llm]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/sushaan-k/healthpipe"
Repository = "https://github.com/sushaan-k/healthpipe"
Documentation = "https://github.com/sushaan-k/healthpipe#readme"
Issues = "https://github.com/sushaan-k/healthpipe/issues"

[project.scripts]
healthpipe = "healthpipe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/healthpipe"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "S",
    "T20",
    "RUF",
]
ignore = [
    "S101",  # assert allowed in tests
    "S311",  # pseudo-random OK for non-crypto
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"examples/*.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["healthpipe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "spacy",
    "pandas",
    "pdfplumber",
    "pytesseract",
    "pdf2image",
    "sdv",
    "sdv.*",
]
ignore_missing_imports = true
